Finished task 1: -Finished tuning the models and the evaluation of them

--- a/coursework_code.ipynb
+++ b/coursework_code.ipynb
@@ -1817,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 30,
    "id": "22f57a58",
    "metadata": {},
    "outputs": [],
@@ -1860,7 +1860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 31,
    "id": "d9966446",
    "metadata": {},
    "outputs": [
@@ -1870,7 +1870,7 @@
        "[Text(0.5, 1.0, 'Testing set k-NN')]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1927,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 32,
    "id": "281d9308",
    "metadata": {},
    "outputs": [],
@@ -1944,7 +1944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 33,
    "id": "b11d036d",
    "metadata": {},
    "outputs": [
@@ -2024,7 +2024,7 @@
        "weighted avg   0.900000  0.700000  0.742857     20.0"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2035,7 +2035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 34,
    "id": "1cfac49b",
    "metadata": {},
    "outputs": [
@@ -2115,7 +2115,7 @@
        "weighted avg   0.715789  0.800000  0.755556     20.0"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2126,7 +2126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 35,
    "id": "2b1b23d4",
    "metadata": {},
    "outputs": [
@@ -2151,7 +2151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 36,
    "id": "dc7b0fda",
    "metadata": {},
    "outputs": [],
@@ -2174,7 +2174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 37,
    "id": "4f10718b",
    "metadata": {},
    "outputs": [],
@@ -2185,7 +2185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 38,
    "id": "561fb611",
    "metadata": {},
    "outputs": [
@@ -2210,7 +2210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 45,
    "id": "32d76607",
    "metadata": {},
    "outputs": [
@@ -2219,22 +2219,25 @@
      "output_type": "stream",
      "text": [
       "Logistic Regression\n",
-      "Training scores:  [0.76435701 0.77557272 0.7905334  0.25005052 0.24304422]\n",
-      "Highest training score:  0.7905334035814181\n",
-      "Testing scores:  [0.76422712 0.77557403 0.79016297 0.25015316 0.24304421]\n",
-      "Highest training score:  0.7901629727396628\n",
-      "Best score chosen is 0.790163 using {'class_weight': {0: 1, 1: 1}}\n"
+      "Training scores:  [0.76548913 0.78283758 0.83605621 0.67006946 0.42532705]\n",
+      "Highest training score:  0.8360562079113323\n",
+      "Testing scores:  [0.76555862 0.78268313 0.83484424 0.66879698 0.42431717]\n",
+      "Highest training score:  0.8348442424486727\n",
+      "Best score chosen is 0.834844 using {'class_weight': {0: 1, 1: 1}}\n"
      ]
     }
    ],
    "source": [
+    "##################################################### Model Tuning #############################################################\n",
+    "\n",
     "# As we can see we get some more realistic results after cross validation, the gap between these accuracies is good\n",
     "# Now let's try and tune our models\n",
     "\n",
+    "# use different class weights for tuning the module / hyperparameters\n",
     "balance = [{0:100,1:1}, {0:10,1:1}, {0:1,1:1}, {0:1,1:10}, {0:1,1:100}]\n",
     "params_lr = dict(class_weight=balance)\n",
     "\n",
-    "# define grid search for logistic regression with the parameters defined above, i.e., different class weights\n",
+    "# define grid search for logistic regression with the hyperparameters defined above, i.e., different class weights\n",
     "grid_lr = GridSearchCV(lr, param_grid=params_lr, cv=cv, return_train_score = True)\n",
     "grid_results_lr = grid_lr.fit(X, y)\n",
     "\n",
@@ -2249,12 +2252,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "616f5604",
+   "execution_count": 43,
+   "id": "c475a4f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k-NN\n",
+      "Training scores:  [0.89013422 0.87149027 0.86141183]\n",
+      "Highest training score:  0.8901342222314772\n",
+      "Testing scores:  [0.81020545 0.81796309 0.82319659]\n",
+      "Highest training score:  0.8231965911322742\n",
+      "Best score chosen is 0.823197 using {'n_neighbors': 7}\n"
+     ]
+    }
+   ],
    "source": [
-    "params_knn = {\"n_neighbors\": np.arange(1, 9), \"metric\": [\"euclidean\", \"cityblock\"]}\n",
+    "# use odd numbers for k neighbors to avoid confusion between classes / hyperparamter\n",
+    "# for the sake of time, I am not going to use more than one hyperparameter\n",
+    "params_knn = {\"n_neighbors\": [3, 5, 7]}\n",
     "grid_knn = GridSearchCV(knn, param_grid = params_knn, cv = cv, return_train_score = True)\n",
     "grid_results_knn = grid_knn.fit(X, y)\n",
     "\n",
@@ -2264,13 +2282,13 @@
     "print(\"Highest training score: \", max(grid_knn.cv_results_['mean_train_score']))\n",
     "print(\"Testing scores: \", grid_knn.cv_results_['mean_test_score'])\n",
     "print(\"Highest training score: \", max(grid_knn.cv_results_['mean_test_score']))\n",
-    "print(\"Best score chosen is %f using %i neighbors\" % (grid_results_knn.best_score_, grid_results_knn.best_params_))"
+    "print(\"Best score chosen is %f using %s\" % (grid_results_knn.best_score_, grid_results_knn.best_params_))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51303974",
+   "id": "07f2ad39",
    "metadata": {},
    "outputs": [],
    "source": []
